0031765: Coding Rules - eliminate GCC compiler warnings -Wcatch-value in IVtk

Catched exceptions are now passed by reference and error message is printed.
Added Standard_FALLTHROUGH to IVtkOCC_ShapePickerAlgo::SetSelectionMode().